# pool_alloc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: BlockAllocator.cpp  BlockAllocator.hpp  MemoryPool.cpp  MemoryPool.hpp  pool_alloc.cpp  pool_alloc.h
tests/: allocationFailure.cpp  general.c  general.cpp  smallBlockSize.cpp
uml/: ClassDiagram.puml
